@@ -1,6 +1,7 @@
 Revision history for POE-Component-IRC-Plugin-Eval
 
 {{$NEXT}}
+    - Mention App::Pocoirc in the SYNOPSIS
 
 0.02  Mon Sep 6 04:08:11 GMT 2010
     - Remove some debugging print statements
